Prevent large images from spilling off canvas.
omeka-s-modules/ImageAnnotate#1

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -43,6 +43,10 @@ p {
     margin: $spacing-l 0;
 }
 
+img {
+    max-width: 100%;
+}
+
 /* @group ----- Mixins ----- */
 
 @mixin de-list {
